--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -3,38 +3,36 @@
 .features {
   display: flex;
   justify-content: center;
-  &.item {
-    width: 270px;
-    margin-right: 30px;
-  }
-  &.item:last-child {
-    margin-right: 0px;
-  }
-  &-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+}
+.features .item {
+  width: 270px;
+  margin-right: 30px;
+}
+.features .item:last-child {
+  margin-right: 0px;
+}
 
-    margin-bottom: 30px;
-    width: 270px;
-    height: 120px;
+.features-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    background-color: $secondary-background-color;
-    border-radius: 4px;
-  }
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
 
-  &-icon {
-    width: 70px;
-    height: 70px;
-  }
+  background-color: $secondary-background-color;
+  border-radius: 4px;
+}
+
+.features-icon {
+  width: 70px;
+  height: 70px;
 }
 
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
-  .border {
-    border-bottom: 1px solid #ececec;
-  }
   &-title {
     margin-top: 0px;
     margin-bottom: 50px;
@@ -53,6 +51,7 @@
     line-height: 1.14;
     text-transform: uppercase;
   }
+
   &-text {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -62,4 +61,8 @@
 
     color: $secondary-text-color;
   }
+}
+
+.section.border {
+  border-bottom: 1px solid #ececec;
 }
