--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,12 +11,14 @@
 
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms $cubic-bezier;
-  .is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    .modal {
-      transform: translate(-50%, -50%) scale(1.1);
-    }
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+
+  .modal {
+    transform: translate(-50%, -50%) scale(1.1);
   }
 }
 
