--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -29,17 +29,18 @@
 
       color: $accent-color;
     }
-    &::after {
-      position: absolute;
-      bottom: 0px;
-      border-radius: 2px;
-
-      content: "";
-      display: block;
-      width: 100%;
-      height: 4px;
-
-      background-color: $accent-color;
-    }
   }
+}
+
+.link.current::after {
+  position: absolute;
+  bottom: 0px;
+  border-radius: 2px;
+
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  background-color: $accent-color;
 }
