--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,5 +1,15 @@
 @import "../utils/variables";
 
+.section-title {
+  margin-top: 0px;
+  margin-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+
 .works {
   display: flex;
   .item {
